[package]
edition = "2021"
name = "clineup"
version = "0.1.0-ci-0"
readme = "README.md"
license-file = "LICENSE"
description = "A command-line utility for organizing media files"
license = "AGPL-3.0"
repository = "https://github.com/antscloud/clineup"
keywords = ["photo-organizer", "file-organization", "exiftool", "cli", "reverse-geocoding"]
authors = ["Antoine Gibek"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.26"
glob = "0.3.1"
clap = "2.33.3"
kamadak-exif = "0.5.5"
regex = "1.9.1"
reqwest = {version = "0.11", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.103"
log = "0.4"
env_logger = "0.10"
sha2 = "0.10"
thiserror = "1.0.48"

[[bin]]
name = "clineup"
path = "src/main.rs"