[package]
authors = ["Antoine Gibek"]
categories = ["command-line-utilities"]
description = "A command-line utility for organizing media files"
edition = "2021"
keywords = ["photo-organizer", "file-organization", "exiftool", "cli", "reverse-geocoding"]
license = "AGPL-3.0"
name = "clineup"
readme = "README.md"
repository = "https://github.com/antscloud/clineup"
version = "0.2.4"

[dependencies]
chrono = "0.4.26"
clap = "2.33.3"
env_logger = "0.10"
glob = "0.3.1"
http = "0.2.9"
indexmap = "2.1.0"
indicatif = "0.17.6"
kamadak-exif = "0.5.5"
log = "0.4"
path-clean = "1.0.1"
regex = "1.9.1"
reqwest = {version = "0.11", features = ["blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.103"
sha2 = "0.10"
thiserror = "1.0.48"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.4"
tempdir = "0.3.7"

[[bin]]
name = "clineup"
path = "src/main.rs"
